...
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- for testing, do not remove -->
            <TextView
                android:id="@+id/bugButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text=""
                android:visibility="gone"
                android:textSize="1sp"/>

            <TextView
                android:id="@+id/bugButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text=""
                android:visibility="gone"
                android:textSize="1sp"/>

            <TextView
                android:id="@+id/bugButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text=""
                android:visibility="gone"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>

            <ImageView
                android:id="@+id/bugButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.4"
                android:paddingBottom="20dp"
                android:src="@drawable/bug_icon_large"/>
...
