...
    <string name="group_file_too_large">File is too large for this group (max. %1$s).</string>
    <string name="group_file_send_large_confirm_title">Send large file?</string>
    <string name="group_file_send_large_confirm_message">This file (%1$s) may take a long time to transfer. Send anyway?</string>
    <string name="group_file_prepare_failed">Could not prepare file for sending.</string>
    <string name="group_video_join_title">Join group video?</string>
    <string name="group_video_join_message">Send your video and audio to everyone in this group?</string>
    <string name="group_video_join_confirm">Yes, start video</string>
    <string name="group_video_join_failed">Could not start group video</string>
    <string name="group_video_join_decline">No</string>
    <string name="call_permission_mic_required">Microphone permission is required for calls.</string>
    <string name="call_permission_camera_required">Camera permission is required for video calls.</string>
    <string name="call_start_failed">Failed to start call.</string>
    <string name="call_log_outgoing_voice">Outgoing voice call</string>
...
    <string name="layout___password">Password</string>
    <string name="layout___password_again">Password again</string>
    <string name="layout___set_password">Set Password</string>
    <string name="layout___skip">skip</string>
    <string name="layout___or">or</string>
    <string name="layout___leave">Leave</string>
    <string name="layout___delete">Delete</string>
    <string name="layout___info">Info</string>
    <string name="layout___create_text_group">Create Text Group</string>
    <string name="layout___create_audio_group">Create Audio Group</string>
    <string name="layout___add_as_toxproxy">add as ToxProxy</string>
    <string name="layout___peer_name">peer name</string>
    <string name="layout___online">Online</string>
...
    <string name="layout___migdb_do_not_close">DO NOT close this screen</string>
    <string name="title_activity_wrong_credentials">Wrong Credentials</string>
    <string name="wrong_credentials_error">Wrong Credentials</string>
    <string name="layout___add_friend">Add Friend</string>
    <string name="layout___create_new_private_group">Create new Private Group</string>
    <string name="layout___create_new_public_group">Create new Public Group</string>
    <string name="layout___join_public_group">Join a Public Group</string>
    <!-- Layout texts -->
    <!-- Layout texts -->
    <!-- Layout texts -->

    <string name="group_peer_kick_button">Remove from group</string>
    <string name="group_peer_kick_hint_cannot_founder">The group founder cannot be removed.</string>
...
